<resources>
    <string name="app_name">NavBarExtended</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="sign_out">Sign out</string>
    <string name="coming_soon">Coming Soon...............</string>
    <string name="news">News</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
</resources>
