<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:title="@string/favorites">
            <menu>
            <item
                android:id="@+id/nav_news"
                android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/news" />
            <item android:id="@+id/nav_movies"
                android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/movies"/>
            <item
                android:id="@+id/nav_music"
                android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/music" />
            </menu>
        </item>

</menu>
