<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/favorites"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/settings" />
        <item android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/about"/>
        <item
            android:id="@+id/nav_signOut"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/sign_out" />
    </group>

</menu>
